kubernetes/apps/default/reports/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reports
spec:
  selector:
    app: reports
  ports:
    - port: 8080
      targetPort: 8080
