kubernetes/apps/default/reports/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reports
spec:
  hostnames:
    - reports.ringbell.cc
  parentRefs:
    - name: internal
      namespace: networking
  rules:
    - backendRefs:
        - name: reports
          port: 8080
